# docs

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
docs/Maintenance/Mechbase/: analysis.rst  index.rst  introduction.rst  measurementpoints.rst  routes.rst  structure.rst
docs/Maintenance/Precision-Maintenance/: grease-calculator.html  grease-calculator.rst
docs/Maintenance/WearDC/: index.rst  introduction.rst  navigation.rst  qrcode.rst  routes.rst  sync.rst
docs/_static/css/: docs.css
docs/locale/en/LC_MESSAGES/: index.mo  index.po
docs/locale/en/LC_MESSAGES/Maintenance/Mechbase/: analysis.mo  analysis.po  index.mo  index.po  introduction.mo  introduction.po  measurementpoints.mo  measurementpoints.po  routes.mo  routes.po  structure.mo  structure.po
docs/locale/en/LC_MESSAGES/Maintenance/Precision-Maintenance/: grease-calculator.mo  grease-calculator.po
docs/locale/en/LC_MESSAGES/Maintenance/WearDC/: index.po  introduction.mo  introduction.po  navigation.mo  navigation.po  qrcode.mo  qrcode.po  routes.mo  routes.po  sync.mo  sync.po
