[tool.poetry]
name = "arpedon-docs"
version = "0.1.0"
description = ""
authors = ["Tasos Sangiotis <tsangiotis@arpedon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.5.4"
sphinx-intl = "^2.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
