[tool.poetry]
name = "arpedon-docs"
version = "0.1.0"
description = ""
authors = ["Tasos Sangiotis <tsangiotis@arpedon.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-intl = "^2.3.1"
sphinx-autobuild = "^2024.10.3"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
